Changed place-holder color to green.
Testing GUI interface for GIT. Changed place holder color to green.

--- a/css/style.css
+++ b/css/style.css
@@ -74,5 +74,5 @@ body {
     width: 50%;
     height: 16em;
     text-align: center;
-    background-color: lightblue;
+    background-color: green;
 }
