--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* ==============================
-   BASE 
+   BASE
    ============================== */
 
 * {
@@ -13,17 +13,12 @@ body {
     box-sizing: border-box;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .center {
     margin: 0 auto;
 }
 
 /* ==============================
-   HEADER 
+   HEADER
    ============================== */
 
 #header {
@@ -49,7 +44,7 @@ body {
 
 #topinfo .topitem {
     width: 100%;
-    padding: .8rem;
+    padding: .9rem .8rem;
     text-align: left;
     display: flex;
     align-items: center;
@@ -66,6 +61,7 @@ body {
 
 .topname {
     font-weight: 600;
+    font-size: 1.1rem;
 }
 
 /*----- Top Image ----- */
@@ -85,31 +81,86 @@ body {
    Services 
    ============================== */
 
-.container .service {
-    width: 50%;
-    height: 16em;
+.servicesbox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px 0 0 0;
+}
+
+.servicesbox .service {
+    width: 90%;
+    height: 30rem;
     text-align: center;
     background-color: green;
 }
 
 /* ==============================
-   About 
+   About
    ============================== */
 
+   .aboutbox {
+       width: 90%;
+       margin: 30px auto;
+       font-size: 1.1rem;
+   }
 
- 
+
 
 /* ==============================
-   Map 
+   Contact
    ============================== */
 
-   #placeholder {
+   #contactbox {
+       display: flex;
+       flex-wrap: wrap;
+       justify-content: center;
+       margin: 10px auto 20px auto;
+       border: 6px solid #EEEEEE;
+       width: 85%;
+   }
+
+   #contactbox h3{
        width: 100%;
-       display: block;
+       text-align: center;
+       font-size: 1.6em;
+       margin: 15px 0 5px 0;
+   }
+
+   .client_input{
+       width: 80%;
+       margin: 13px 0;
+       padding: 0 10px;
+       font-size: 1.2em;
+       border-style: solid;
+       border: none;
+       border-radius: 6px;
+       background-color: #F5F5F5;
+   }
+
+   #client_name,
+   #client_email,
+   #client_phone{
+       height: 65px;
+   }
+
+   #client_message {
+       margin: 13px 0 26px 0;
+       padding: 10px;
+   }
+
+
+/* ==============================
+   Map
+   ============================== */
+
+   #map {
+       width: 100%;
+       height: 550px;
    }
 
 /* ==============================
-   Footer 
+   Footer
    ============================== */
 
    .upper {
