--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,15 @@ body {
     width: 100%;
 }
 
+#mainimg {
+    text-align: center;
+}
+
+#mainimg img {
+    margin: 2rem 1rem;
+    width: 80%;
+}
+
 /*----- Top Bar ----- */
 
 #topbar {
@@ -90,7 +99,7 @@ body {
 
 .servicesbox .service {
     width: 90%;
-    height: 30rem;
+    height: 40rem;
     text-align: center;
     background-color: green;
 }
@@ -102,7 +111,7 @@ body {
    .aboutbox {
        width: 90%;
        margin: 30px auto;
-       font-size: 1.1rem;
+       font-size: 1.3rem;
    }
 
 
@@ -111,13 +120,23 @@ body {
    Contact
    ============================== */
 
+   #contact {
+       background-image: url("../images/grass.jpeg");
+       background-position: bottom;
+       background-repeat: no-repeat, repeat;
+       background-size: 100% 80%;
+       padding-bottom: 30px;         
+   }
+
    #contactbox {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
-       margin: 10px auto 20px auto;
        border: 6px solid #EEEEEE;
+       margin: auto;
        width: 85%;
+       background-color: rgba(255, 255, 255, .7);
+       padding: 10px 0;
    }
 
    #contactbox h3{
@@ -128,7 +147,7 @@ body {
    }
 
    .client_input{
-       width: 80%;
+       width: 85%;
        margin: 13px 0;
        padding: 0 10px;
        font-size: 1.2em;
