--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     margin: 0 auto;
 }
 
+
 /* ==============================
    HEADER
    ============================== */
@@ -33,6 +34,7 @@ body {
     margin: 2rem 1rem;
     width: 75%;
 }
+
 
 /*----- Top Bar ----- */
 
@@ -73,6 +75,7 @@ body {
     font-weight: 600;
     font-size: 1.8rem;
 }
+
 
 /*----- Top Image ----- */
 
@@ -115,6 +118,7 @@ body {
     margin: 1.5rem auto;
 }
 
+
 /* ==============================
    About
    ============================== */
@@ -122,10 +126,32 @@ body {
    .aboutbox {
        width: 85%;
        margin: 30px auto;
-       font-size: 1.9rem;
+       font-size: 2rem;
    }
 
 
+/* ==============================
+   Gallery
+   ============================== */
+
+   #gallery {
+       margin: 30px auto 50px auto;
+   }
+
+   .gallerybox{
+       width: 85%;
+       margin: auto;
+   }
+
+   .gallerybox img{
+       width: 100%
+   }
+
+    .slick-prev:before,
+    .slick-next:before
+    {
+        display: none;
+    }
 
 /* ==============================
    Contact
@@ -136,7 +162,8 @@ body {
        background-position: bottom;
        background-repeat: no-repeat, repeat;
        background-size: 100% 80%;
-       padding-bottom: 30px;         
+       padding-bottom: 30px;   
+             
    }
 
    #contactbox {
@@ -186,8 +213,9 @@ body {
 
    #map {
        width: 100%;
-       height: 550px;
+       height: 600px;
    }
+
 
 /* ==============================
    Footer
@@ -200,3 +228,4 @@ body {
    .lower {
        background-color: #292929;
    }
+
