--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,28 @@ body {
     margin: 3rem auto;
 }
 
+#topbutton {
+    display: none;
+    position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: rgba(66,66,66 ,.9);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+#topbutton:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
+
+#topbutton img {
+    width: 2.4rem;
+}
 
 /* ==============================
    HEADER
