--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     z-index: 99;
     border: none;
     outline: none;
-    background-color: rgba(66,66,66 ,.9);
+    background-color: rgba(66,66,66 , .6);
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -39,7 +39,7 @@ body {
 }
 
 #topbutton:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+    background-color: #555;
 }
 
 #topbutton img {
@@ -314,9 +314,27 @@ body {
 
    .upper {
        background-color: #3c3c3c;
+       height: 2rem;
    }
 
    .lower {
        background-color: #292929;
    }
 
+  #footer .lower .freepik {
+       color: #565656;
+       font-size: .9rem;
+       text-align: center;
+       padding-bottom: 1.7rem;
+   }
+
+     #footer .lower .copyright {
+       color: #565656;
+       font-size: 1rem;
+       text-align: center;
+       padding-top: 1.7rem;
+   }
+
+    #footer .lower .freepik a{
+        color: #565656;
+    }
