--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
 }
 
 #topinfo .facebook {
-    width: 7%
+    width: 5%
 }
 
 .topname {
@@ -321,20 +321,27 @@ body {
        background-color: #292929;
    }
 
-  #footer .lower .freepik {
-       color: #565656;
-       font-size: 1.2rem;
-       text-align: center;
-       padding-bottom: 2.5rem;
-   }
+    #footer .lower .copyright {
+        color: #565656;
+        font-size: 1.7rem;
+        text-align: center;
+        padding-top: 3rem;
+    }
 
-     #footer .lower .copyright {
-       color: #565656;
-       font-size: 1.5rem;
-       text-align: center;
-       padding-top: 2rem;
-   }
+    #footer .lower .credit {
+        color: #565656;
+        font-size: 1.3rem;
+        text-align: center;
+        padding: .7rem 0;
+    }
 
-    #footer .lower .freepik a{
+    #footer .lower .freepik {
+        color: #565656;
+        font-size: 1.3rem;
+        text-align: center;
+        padding-bottom: 3rem;
+    }
+
+    #footer .lower a{
         color: #565656;
     }
