--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 #topbar {
     background-color: #3a3a3a;
     color: #777777;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 580;
 }
 
@@ -116,12 +116,12 @@ body {
 }
 
 #topinfo .facebook {
-    width: 5%
+    width: 4%
 }
 
 .topname {
     font-weight: 600;
-    font-size: 1.8rem;
+    font-size: 1.2rem;
 }
 
 
@@ -156,11 +156,11 @@ body {
 .service {
     width: 75%;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.4rem;
 }
 
 .service img {
-    width: 50%;
+    width: 55%;
     display: block;
     margin: 1.5rem auto;
 }
@@ -169,7 +169,7 @@ body {
     font-family: 'Slabo 27px', serif;
     font-weight: 800;
     margin-bottom: 1rem;
-    font-size: 3rem;
+    font-size: 2.4rem;
 }
 
 
@@ -180,7 +180,7 @@ body {
    .aboutbox {
        width: 85%;
        margin: 30px auto;
-       font-size: 2rem;
+       font-size: 1.5rem;
    }
 
 
@@ -193,7 +193,7 @@ body {
    }
 
    .gallerybox{
-       width: 85%;
+       width: 90%;
        margin: auto;
    }
 
@@ -215,7 +215,7 @@ body {
        background-image: url("../images/grass.jpeg");
        background-position: bottom;
        background-repeat: no-repeat, repeat;
-       background-size: 100% 80%;
+       background-size: 100% 65%;
        padding-bottom: 30px;   
              
    }
@@ -234,7 +234,8 @@ body {
    #contactbox h3{
        width: 100%;
        text-align: center;
-       font-size: 2em;
+       font-size: 1.6em;
+       font-weight: 800;
        margin: 15px 0 10px 0;
    }
 
@@ -242,7 +243,7 @@ body {
        width: 85%;
        margin: 13px 0;
        padding: 0 10px;
-       font-size: 1.6em;
+       font-size: 1.2em;
        border-style: solid;
        border: none;
        border-radius: 6px;
@@ -252,7 +253,7 @@ body {
    #client_name,
    #client_email,
    #client_phone{
-       height: 70px;
+       height: 50px;
    }
 
    #client_message {
@@ -271,7 +272,7 @@ body {
         cursor: pointer;
         width: 85%;
         font-size: 1.8rem;
-        padding: 20px 80px;
+        padding: 15px 80px;
         display: inline-block;
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -323,23 +324,23 @@ body {
 
     #footer .lower .copyright {
         color: #565656;
-        font-size: 1.7rem;
+        font-size: 1rem;
         text-align: center;
-        padding-top: 3rem;
+        padding-top: 2rem;
     }
 
     #footer .lower .credit {
         color: #565656;
-        font-size: 1.3rem;
+        font-size: 1rem;
         text-align: center;
-        padding: .7rem 0;
+        padding: .5rem 0;
     }
 
     #footer .lower .freepik {
         color: #565656;
-        font-size: 1.3rem;
+        font-size: .8rem;
         text-align: center;
-        padding-bottom: 3rem;
+        padding-bottom: 2rem;
     }
 
     #footer .lower a{
