--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 .divider {
     background-color: #fff;
-	border-top: .4rem dashed #7CB342;
+	border-top: .3rem dashed #7CB342;
     margin: 3rem auto;
 }
 
@@ -69,8 +69,8 @@ body {
 #topbar {
     background-color: #3a3a3a;
     color: #777777;
-    font-size: 1rem;
-    font-weight: 580;
+    font-size: .8rem;
+    font-weight: 600;
 }
 
 #topinfo {
@@ -116,12 +116,12 @@ body {
 }
 
 #topinfo .facebook {
-    width: 4%
+    width: 5%
 }
 
 .topname {
-    font-weight: 600;
-    font-size: 1.2rem;
+    font-weight: 700;
+    font-size: 1rem;
 }
 
 
@@ -180,7 +180,7 @@ body {
    .aboutbox {
        width: 85%;
        margin: 30px auto;
-       font-size: 1.2rem;
+       font-size: 1rem;
    }
 
 
@@ -228,7 +228,7 @@ body {
        margin: auto;
        width: 80%;
        background-color: rgba(255, 255, 255, .7);
-       padding: 10px 0 25px 0;
+       padding: 8px 0 25px 0;
    }
 
    #contactbox h3{
@@ -241,9 +241,9 @@ body {
 
    .client_input{
        width: 80%;
-       margin: 15px 0;
+       margin: 7px 0;
        padding: 0 10px;
-       font-size: 1rem;
+       font-size: .8rem;
        border-style: solid;
        border: none;
        border-radius: 6px;
@@ -253,11 +253,11 @@ body {
    #client_name,
    #client_email,
    #client_phone{
-       height: 50px;
+       height: 2.5rem;
    }
 
    #client_message {
-       margin: 13px 0 26px 0;
+       margin: 13px 0 15px 0;
        padding: 10px;
    }
 
@@ -270,9 +270,9 @@ body {
         border: none;
         background: none;
         cursor: pointer;
-        width: 70%;
-        font-size: 1.5rem;
-        padding: 15px 90px;
+        width: 80%;
+        font-size: 1.2rem;
+        padding: 8px 30%;
         display: inline-block;
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -305,7 +305,7 @@ body {
 
    #map {
        width: 100%;
-       height: 600px;
+       height: 480px;
    }
 
 
