--- a/css/media.css
+++ b/css/media.css
@@ -62,6 +62,12 @@
             
         }
 
+        .service img {
+            width: 80%;
+            display: block;
+        }
+
+
         .servicesbox .service:not(:last-child){
             margin-bottom: 0;
         }
@@ -71,14 +77,9 @@
             text-align: center;
         }
 
-        .service img {
-            width: 80%;
-            display: block;
-        }
-
         .serviceinfo {
-            background-color: blue;
-            justify-content: flex-end;
+            position: absolute;
+            bottom:0;
         }
 
          /*----- About ----- */
@@ -103,4 +104,51 @@
             display: block;
         }
 
+        /*----- Contact Box ----- */
+
+        #contactbox {
+            width: 40%;
+        }
+
+        #contact {
+            background-image: url("../images/grass.jpeg");
+            background-position: bottom;
+            background-repeat: no-repeat, repeat;
+            background-size: 100% 100%;
+            padding-bottom: 30px;
+        }
+
+    }
+
+    @media screen and (min-width: 895px) {
+
+        /*----- Services ----- */
+
+        .service {
+            height: 38rem;
+        }
+    }
+
+    @media screen and (min-width: 990px) {
+        
+        /*----- Services ----- */
+
+        .service {
+            height: 35rem;
+        }
+    }
+
+    @media screen and (min-width: 1460px) {
+        
+        /*----- Services ----- */
+
+        .service {
+            height: 33rem;
+        }
+
+        /*----- Contact Box ----- */
+
+        #contactbox {
+            width: 28%;
+        }
     }
