--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
 }
 
 #topinfo .facebook {
-    width: 5%
+    width: 1rem;
 }
 
 .topname {
@@ -155,8 +155,10 @@ body {
 
 .service {
     width: 75%;
+    height: 38rem;
     text-align: center;
     font-size: 1.2rem;
+    position: relative;
 }
 
 .service img {
@@ -216,8 +218,7 @@ body {
        background-position: bottom;
        background-repeat: no-repeat, repeat;
        background-size: 100% 65%;
-       padding-bottom: 30px;   
-             
+       padding-bottom: 30px;     
    }
 
    #contactbox {
@@ -229,9 +230,11 @@ body {
        width: 80%;
        background-color: rgba(255, 255, 255, .7);
        padding: 8px 0 25px 0;
+       box-shadow: 14px 20px 5px rgba(0, 0, 0, .2);
    }
 
    #contactbox h3{
+       font-family: 'Slabo 27px', serif;
        width: 100%;
        text-align: center;
        font-size: 1.6em;
@@ -241,7 +244,7 @@ body {
 
    .client_input{
        width: 80%;
-       margin: 7px 0;
+       margin: 5px 0;
        padding: 0 10px;
        font-size: .8rem;
        border-style: solid;
@@ -272,7 +275,7 @@ body {
         cursor: pointer;
         width: 80%;
         font-size: 1.2rem;
-        padding: 8px 30%;
+        padding: 8px 20px;
         display: inline-block;
         text-transform: uppercase;
         letter-spacing: 1px;
