Adjusted top image position.

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
     height: 30rem;
     background-image: url("../images/carousel.jpg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 50% 40%;
     background-size: cover;
     border-top: 6px solid #a2c046;
     border-bottom: 7px solid #a2c046;
@@ -212,7 +212,7 @@ body {
    #contact {
        background-image: url("../images/grass.jpeg");
        background-position: bottom;
-       background-repeat: no-repeat, repeat;
+       background-repeat: no-repeat;
        background-size: 100% 65%;
        padding-bottom: 30px;     
    }
