--- a/css/media.css
+++ b/css/media.css
@@ -163,6 +163,13 @@
             width: 75%;
         }
 
+        /*----- Contact Box ----- */
+
+        #contact {
+            background-size: 100% 100%;
+        }
+
+
     }
 
     @media screen and (min-width: 1460px) {
