--- a/css/style.css
+++ b/css/style.css
@@ -150,11 +150,9 @@ body {
 }
 
 .service {
-    width: 75%;
-    height: 35rem;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    font-size: 1.2rem;
-    position: relative;
 }
 
 .service img {
