Set HR border bottom to 0
Removed the gray underline that was visible under the HR

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
 
 .divider {
     background-color: #fff;
-	border-top: .3rem dashed #7CB342;
+    border-top: .3rem dashed #7CB342;
+    border-bottom: none;
     margin: 2rem auto;
     
 }
