Corrected bottom margin of services div in media query.

--- a/css/media.css
+++ b/css/media.css
@@ -121,6 +121,7 @@
         .service img {
             width: 60%;
             display: block;
+            margin-bottom: 3rem;
         }
 
         .servicetitle {
