Auto stash before merge of "master" and "origin/master"

--- a/css/media.css
+++ b/css/media.css
@@ -79,12 +79,9 @@
             display: block;
         }
 
-        .slick-prev {
-            
-        }
-
+        .slick-prev,
         .slick-next {
-            
+            width: 40px;
         }
 
         /*----- Contact Box ----- */
